# python_magnetsetup

./: .gitignore  Makefile  README.md  pyproject.toml  requirements_dev.txt  settings.env  setup.py
.devcontainer/: Dockerfile  devcontainer.json
debian/: changelog  control  rules
debian/patches/: series
python_magnetsetup/: Material.py  MeshData.py  NumModel.py  SimMaterial.py  ana.py  bitter.py  cfg.py  cli.py  config.py  create_U.py  deserialize.py  file_utils.py  insert.py  job.py  jsonmodel.py  machines.json  machines.py  magnetsetup.json  node.py  objects.py  python_magnetsetup.py  python_magnetsetup_request.py  setup.py  supra.py  units.py  utils.py
python_magnetsetup/postprocessing/: pv-scalarfield.py
python_magnetsetup/workflows/: README.md  cfpdes_insert_fixcurrent.py  cli.py  params.py  real_methods.py  solver.py
test/HL-34/reference/: HL-34-data-cfpdes-mag-linear-Axi-sim.json  HL-34-data-cfpdes-th-linear-Axi.cfg  HL-34-data-cfpdes-thmag-linear-Axi.cfg  HL-34-data-cfpdes-thmag-nonlinear-Axi-sim.json  HL-34-data-cfpdes-thmag-nonlinear-Axi.cfg  HL-34-data-cfpdes-thmagel-linear-Axi-sim.json  HL-34-data-cfpdes-thmagel-linear-Axi.cfg  HL-34-data-cfpdes-thmagel-nonlinear-Axi-sim.json  HL-34-data-cfpdes-thmagel-nonlinear-Axi.cfg
test/HL-34/test_case/: 1torus-axis.geo  HL-31_H1.yaml  test.yaml  test_case-data-cfpdes-thmagel-nonlinear-Axi-sim.json  test_case-data-cfpdes-thmagel-nonlinear-Axi.cfg  test_case-data.json
test/HL-34/test_mag/: HL-31_H1.yaml  HL-34-data-cfpdes-mag-linear-Axi-fixcurrent.json  HL-34-data-cfpdes-mag-linear-Axi-sim.json  U.csv  (+4 more)
(+569 files in other folders)
